# garmin_files_editor

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  README.rst
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
cmake/: gtest-download.cmake  gtest.cmake
docker/: Dockerfile
engine/: CMakeLists.txt
engine/src/: garmin_files_editor.h
engine/src/garmin_files_editor/: application.cpp  application.h  core.h
engine/src/garmin_files_editor/tcx/models/: Position.cpp  Position.h  TcxParser.cpp  TcxParser.h  Trackpoint.cpp  Trackpoint.h  types.h
engine/tests/: CMakeLists.txt  test1.cpp
engine/tests/garmin_files_editor/tcx/models/: PositionTest.cpp  TrackpointTest.cpp  position_test.cpp
engine/tests/helpers/: test_helper_functions.cpp  test_helper_functions.h
examples/: small.xml
logging/: CMakeLists.txt  Log.cpp  Log.h
sandbox/: CMakeLists.txt
sandbox/src/: EntryPoint.cpp  Sandbox.cpp  Sandbox.h
sandbox/tests/: CMakeLists.txt  test1.cpp
